--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <li style="float:left"><a id="name" href="home.html">NAOMI H. NGUYEN<a/></li>
   <li><a id="nav" href="contact.html">CONTACT</a></li>
   <li><a id="nav" href="playground.html">PLAYGROUND</a></li>
-  <li><a id="nav" href="index.html">WORK</a></li>
+  <li><a id="nav" href="../index.html">WORK</a></li>
   <li><a id="nav" href="about.html">ABOUT</a></li>
   <li><a id="nav" href="home.html">HOME<a/></li>
 </ul>
