Second Commit Add2
Change uppercase to lowercase for assets

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 <br><br>
 <br><br>
 <div class="IntegratedCal">
-<img src="../assets/IntegratedCal.jpg" width="500" height="680" alt="Integrated Calendar">
+<img src="../assets/integratedcal.jpg" width="500" height="680" alt="Integrated Calendar">
 </div>
 <br><br>
 <div class="BrellaCover">
-<img src="../assets/BrellaCover.jpg" width="500" height="400" alt="Brella Cover Page">
+<img src="../assets/brellacover.jpg" width="500" height="400" alt="Brella Cover Page">
 </div>
 <div class="BrellaArtifacts">
-<img src="../assets/BrellaArtifacts.jpg" width="500" height="330" alt="Brella Artifacts Page">
+<img src="../assets/brellaartifacts.jpg" width="500" height="330" alt="Brella Artifacts Page">
 </div>
 <br><br>
 <br><br>
