--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <br><br>
 <br><br>
 <div class="IntegratedCal">
-<img src="assets/integratedcal.jpg" width="500" height="680" alt="Integrated Calendar">
+<img src="./assets/integratedcal.jpg" width="500" height="680" alt="Integrated Calendar">
 </div>
 <br><br>
 <div class="BrellaCover">
